--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
      
   <body>
     <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
     <!-- Vite will inject the correct built JS file during build -->
   </body>
 </html>
