--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
-    <!-- Vite will inject the correct built JS file during build -->
+    <script type="module" src="/educon1/assets/index-xxxx.js"></script>
   </body>
 </html>
