--- a/index.html
+++ b/index.html
@@ -16,10 +16,8 @@
     <meta name="twitter:site" content="@lovable_dev" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
-     
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-    <script type="module" src="/educon1/assets/index-xxxx.js"></script>
+    <!-- Vite will inject the correct built JS file during build -->
   </body>
 </html>
